# qcmet

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  NOTICE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: Makefile
docs/source/: conf.py  index.rst  user_guide.rst
docs/source/api/: benchmarks.rst  core.rst  devices.rst  index.rst  utils.rst
legacy/: LICENSE  README.md  base_requirements.txt  conda_environment.yml  full_requirements.txt
legacy/_helpers/: README_circuit_submitter_and_hardware_runs.md  backend_helpers.py  circuit_submitter.py  noise_model.py  noisy_simulator_wrappers.py  oqc_direct_wrappers.py  pygsti_experiment.py
legacy/tutorials/circuit_execution_quality_metrics/: README.md
legacy/tutorials/gate_execution_quality_metrics/: README.md
legacy/tutorials/hardware_architecture_properties/: README.md
legacy/tutorials/quantum_annealers/: README.md
legacy/tutorials/qubit_quality_metrics/: README.md
legacy/tutorials/speed_metrics/: README.md
qcmet/: __init__.py
qcmet/benchmarks/: __init__.py  base_benchmark.py  benchmark_collection.py  sequential_benchmark.py
qcmet/core/: __init__.py  exceptions.py  file_manager.py
qcmet/devices/: __init__.py  aer_simulator.py  base_device.py  ideal_simulator.py  noisy_simulator.py  qiskit_device.py
qcmet/utils/: __init__.py  circuit_fusion.py  fidelities.py  noiseless_simulation.py  pauli_twirling.py
tests/benchmarks/: test_benchmark_collection.py  test_sequential_benchmark.py
tests/core/: test_base_benchmark.py  test_file_manager.py
tests/devices/: test_aer_simulator.py  test_ideal_simulator.py  test_noisy_simulator.py
tests/utils/: test_circuit_fusion.py  test_pauli_twirling.py
tutorials/: 01_installation.ipynb  02_quickstart.ipynb  03_qcmet_workflow.ipynb  04_qubit_quality_metrics.ipynb  05_gate_quality_metrics.ipynb  06_circuit_execution_quality_metrics.ipynb  07_well_studied_task_execution_quality_metrics.ipynb
(+141 files in other folders)
